# ShopAI

./: .gitignore  LICENSE  README.md
shopai_seo_agent/: README_CREWAI.md  pyproject.toml
shopai_seo_agent/output/: report.md
shopai_seo_agent/src/shopai_seo_agent/: crew.py  main.py
shopai_seo_agent/src/shopai_seo_agent/config/: agents.yaml  tasks.yaml
